xee-xpath/tests/snapshots/xpath__default_last_no_context.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"fn:last()\")"
---
Err(
    SpannedError {
        error: XPDY0002,
        span: Some(
            SourceSpan(
                0,
                9,
            ),
        ),
        detail: None,
        contexts: [],
    },
)
