xee-xpath/tests/snapshots/xpath__fn_root_absent.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"fn:root()\")"
---
Err(
    SpannedError {
        error: XPDY0002,
        span: Some(
            SourceSpan(
                0,
                9,
            ),
        ),
        detail: None,
        contexts: [],
    },
)
